--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1889,7 +1889,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .social-list { justify-content: center; }
 
-
+  .highlighter {
+    color: var(--orange-yellow-crayola);
+  }
 
   /**
 	 * RESUME
